--- a/index.html
+++ b/index.html
@@ -325,13 +325,13 @@
 <body>
     <div class="container">
         <div class="right-feathers">
-            <img src="./img/right_feathers.png" alt="">
+            <img src="./img/right_feathers.png" alt="#">
         </div>
         <div class="left-feathers">
-            <img src="./img/left_feathers.png" alt="">
+            <img src="./img/left_feathers.png" alt="#">
         </div>
         <div class="main-logo" data-aos="zoom-in" data-aos-delay="200" data-aos-once="true">
-            <img src="./img/hermes-logo.png" alt="">
+            <img src="./img/hermes-logo.png" alt="Logo">
         </div>
         <div class="about" data-aos="zoom-in-down" data-aos-delay="500" data-aos-once="true">
             <h1>About</h1>
@@ -363,7 +363,7 @@
             <div class="features-grid">
                 <div class="ele">
                     <div class="circle">
-                        <img src="./img/qna.svg" alt="">
+                        <img src="./img/qna.svg" alt="Live Quizzes">
                     </div>
                     <strong>Create or take part in a Live Quiz!</strong>
 
@@ -371,14 +371,14 @@
                 <div class="ele">
 
                     <div class="circle">
-                        <img src="./img/poll.svg" alt="">
+                        <img src="./img/poll.svg" alt="Live Polls">
                     </div>
                     <strong>Create or take part in a Live Polling session!</strong>
                 </div>
                 <div class="ele">
 
                     <div class="circle">
-                        <img src="./img/feedback.svg" alt="">
+                        <img src="./img/feedback.svg" alt="Feedback Sessions">
                     </div>
                     <strong>Create or take part in a Feedback session!</strong>
                 </div>
@@ -392,7 +392,7 @@
             </div>
             <div class="right-section">
                 <p>A project developed by</p>
-                <img src="./img/dsclogo.png" alt="">
+                <img src="./img/dsclogo.png" alt="DSV VIT" onclick="window.open(`https://dscvit.com`)">
             </div>
         </div>
     </div>
