--- a/create/main2.html
+++ b/create/main2.html
@@ -15,6 +15,7 @@
     <meta name="description"
         content="A unique solution for anyone who wants to expose their audiences to quizzes, polls or feedback sessions!">
     <meta name=”robots” content="index, nofollow">
+    <link rel="canonical" href="https://dsc-hermes.netlify.app/create/main2.html">
 </head>
 
 <body>
