--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
     <meta name="description"
         content="Create quizzes, polls or feedback sessions or Participate in an event set up for you!">
     <meta name=”robots” content="index, follow">
+    <link rel="canonical" href="https://dsc-hermes.netlify.app/">
     <link rel="icon" type="image/png" href="./img/favicon.png">
 </head>
 
