--- a/participate/event2.html
+++ b/participate/event2.html
@@ -9,6 +9,8 @@
     <title>Hermes | Join Event</title>
     <meta name="description" content="Participate in an Event created for you!">
     <meta name=”robots” content="index, nofollow">
+    <link rel="canonical" href="https://dsc-hermes.netlify.app/participate/event2.html">
+
     <style>
         :root {
             --main-color: #2784FB;
