--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             font-weight: 500;
             font-size: 1.2rem;
             border-radius: 7px;
+            cursor: pointer;
         }
 
         .features {
@@ -202,6 +203,10 @@
 
         ::-webkit-scrollbar-thumb {
             background-color: rgb(40, 131, 251);
+        }
+
+        .participate-btn {
+            min-width: 118px;
         }
 
         @media(max-width: 600px) {
@@ -354,7 +359,8 @@
                 <h1>Participate</h1>
                 <p>If you wish to engage in any of the activities created for you, please visit the Participate page!
                 </p>
-                <button class="main-button" onclick="window.open('./participate/event2.html')">Participate</button>
+                <button class="main-button participate-btn"
+                    onclick="window.open('./participate/event2.html')">Participate</button>
             </div>
         </div>
         <div class="features" id="features" data-aos="fade-down" data-aos-anchor="#features" data-aos-once="true">
