--- a/create/reg.html
+++ b/create/reg.html
@@ -445,7 +445,7 @@
             <label for="pass" class="l3">Password</label>
             <input type="password" id="pass" placeholder="Password" required>
             <button class="main-button" type="submit" id="reg">Register!</button>
-            <a href="">Already have an Account? Click here</a>
+            <a href="main2.html">Already have an Account? Click here</a>
         </div>
     </div>
     <script>
