--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="admin-side" data-aos="fade-right" data-aos-delay="700" data-aos-once="true">
                 <h1>Create</h1>
                 <p>Visit the Create page to explore the various activities you can expose your audiences to!</p>
-                <button class="main-button" onclick="window.open('./create/main2.html')">Create</button>
+                <button class="main-button" onclick="window.open('./create/reg.html')">Create</button>
             </div>
             <div class="user-side" data-aos="fade-left" data-aos-delay="700" data-aos-once="true">
                 <h1>Participate</h1>
