--- a/create/reg.html
+++ b/create/reg.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
     <style>
         :root {
             --main-color: rgb(40, 131, 251);
@@ -422,6 +424,8 @@
             color: red;
         }
     </style>
+    <link rel="icon" type="image/png" href="../img/favicon.png">
+
     <title>Hermes | Registration</title>
 </head>
 
