start to create

--- a/create/reg.html
+++ b/create/reg.html
@@ -441,7 +441,7 @@
             <img src="../img/hermes-logo.png" alt="Logo">
         </div>
         <div class="main">
-            <h1>Register to Start an Event!</h1>
+            <h1>Register to Create an Event!</h1>
             <label for="name" class="l1">Name</label>
             <input type="text" id="name" placeholder="Your Name" required>
             <label for="email" class="l2">Email</label>
