--- a/create/reg.html
+++ b/create/reg.html
@@ -84,6 +84,9 @@
             margin-bottom: 90px;
         }
 
+        button::-moz-focus-inner {
+            border: 0;
+        }
 
         .sections {
             position: relative;
