--- a/participate/event2.html
+++ b/participate/event2.html
@@ -250,6 +250,9 @@
             fetch("https://mighty-sea-62531.herokuapp.com/api/events/getEvent/" + eventCode.value, requestOptions)
                 .then(response => {
                     console.log(response)
+                    if (!response.ok) {
+                        throw Error(response.statusText);
+                    }
                     return response.json();
                 })
                 .then(async (result) => {
@@ -295,6 +298,9 @@
             actions.forEach((ele, index) => {
                 fetch("https://mighty-sea-62531.herokuapp.com/api/actions/getActiondetail/" + ele, requestOptions)
                     .then(response => {
+                        if (!response.ok) {
+                            throw Error(response.statusText);
+                        }
                         return response.json();
                     })
                     .then(async (result) => {
@@ -317,7 +323,10 @@
                             activeActionsDiv.innerHTML = "It seems your Admin hasn't created any activities for you yet!"
                         }
                     })
-                    .catch(error => console.log('error', error));
+                    .catch(error => {
+                        console.log('error', error);
+                        window.alert("There was an error please try again!");
+                    });
 
             })
         }
