--- a/participate/action.html
+++ b/participate/action.html
@@ -392,7 +392,15 @@
         let feedbackNo = 0;
         let eventType;
         const container = document.querySelector(".container");
-        const waitDiv = document.querySelector(".next-question-wait")
+        const waitDiv = document.querySelector(".next-question-wait");
+
+        let masterErrorHandler = (err) => {
+            window.alert("There was an error. The please join the activity(quiz/poll/feedback) again!");
+            sessionStorage.clear();
+            window.location.href = "event2.html";
+        }
+
+
         let fetchQuestions = () => {
             var requestOptions = {
                 method: 'GET',
@@ -400,16 +408,14 @@
             };
             fetch("https://mighty-sea-62531.herokuapp.com/api/actions/getActiondetail/" + actionId, requestOptions)
                 .then(response => {
-                    if (response.status == 200) {
-                        return response.json();
+                    if (!response.ok) {
+                        throw Error(response.statusText);
                     }
-                    else {
-                        return "Error";
-                    }
+                    return response.json();
                 })
                 .then(result => {
                     if (result == "Error") {
-                        console.log("Error")
+                        console.log("Error");
                     }
                     else {
                         eventType = result["action_type"];
@@ -442,7 +448,10 @@
                         }
                     }
                 })
-                .catch(error => console.log('error', error));
+                .catch(error => {
+                    console.log('error', error);
+                    masterErrorHandler(error);
+                });
         }
         fetchQuestions();
 
@@ -524,7 +533,12 @@
                 };
                 console.log(theQuestionId)
                 fetch("https://mighty-sea-62531.herokuapp.com/api/questions/nextQuestion/" + actionId + "/" + theQuestionId, requestOptions)
-                    .then(response => response.json())
+                    .then(response => {
+                        if (!response.ok) {
+                            throw Error(response.statusText);
+                        }
+                        return response.json();
+                    })
                     .then(result => {
                         console.log(result);
                         theQuestionId = result["_id"];
@@ -532,7 +546,10 @@
                         renderQuiz(theQuestion);
                         resolve();
                     })
-                    .catch(error => console.log('error', error));
+                    .catch(error => {
+                        console.log('error', error);
+                        masterErrorHandler(error)
+                    });
             })
 
         }
