--- a/create/reg.html
+++ b/create/reg.html
@@ -568,8 +568,14 @@
                 redirect: 'follow'
             };
 
-            fetch("https://mighty-sea-62531.herokuapp.com/api/user/register", requestOptions)
-                .then(response => response.json())
+            fetch("https://hermes.dscomg.com/api/user/register", requestOptions)
+                .then(response => {
+                    console.log(response)
+                    if (!response.ok) {
+                        throw Error(response.statusText);
+                    }
+                    return response.json();
+                })
                 .then(result => {
                     console.log(result);
                     let res = result;
