--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script>
-        window.location.href = "/participate/event2.html";
+        window.location.href = "/participate/event.html";
     </script>
     <style>
         :root {
@@ -363,7 +363,7 @@
                 <p>If you wish to engage in any of the activities created for you, please visit the Participate page!
                 </p>
                 <button class="main-button participate-btn"
-                    onclick="window.open('./participate/event2.html')">Participate</button>
+                    onclick="window.open('./participate/event.html')">Participate</button>
             </div>
         </div>
         <div class="features" id="features" data-aos="fade-down" data-aos-anchor="#features" data-aos-once="true">
