--- a/create/main.html
+++ b/create/main.html
@@ -15,7 +15,7 @@
     <meta name="description"
         content="A unique solution for anyone who wants to expose their audiences to quizzes, polls or feedback sessions!">
     <meta name=”robots” content="index, nofollow">
-    <link rel="canonical" href="https://dsc-hermes.netlify.app/create/main2.html">
+    <link rel="canonical" href="https://poll.dscomg.com/create/main.html">
 </head>
 
 <body>
