--- a/create/reg.html
+++ b/create/reg.html
@@ -452,7 +452,7 @@
             <label for="pass" class="l3">Password</label>
             <input type="password" id="pass" placeholder="Password" required>
             <button class="main-button" type="submit" id="reg">Register!</button>
-            <a href="main2.html">Already have an Account? Click here</a>
+            <a href="main.html">Already have an Account? Click here</a>
         </div>
     </div>
     <script>
@@ -594,7 +594,7 @@
                         removeLoader(but, "Registration Successful!")
                         but.style.background = "lightgreen";
                         setTimeout(() => {
-                            window.location.href = "main2.html"
+                            window.location.href = "main.html"
                         }, 1000)
                     }
 
