--- a/testing/socket-testing.html
+++ b/testing/socket-testing.html
@@ -13,7 +13,7 @@
     <script>
         let option_id = "00";
 
-        socket = io('https://hermes.dscomg.com');
+        socket = io('https://hermes.dscomg.com/', { secure: true });
         socket.on("connect", () => {
             console.log(socket.connected);
             for (i = 0; i < 2; i++) {
