--- a/participate/action.html
+++ b/participate/action.html
@@ -397,7 +397,7 @@
         let masterErrorHandler = (err) => {
             window.alert("There was an error. The please join the activity(quiz/poll/feedback) again!");
             sessionStorage.clear();
-            window.location.href = "event2.html";
+            window.location.href = "event.html";
         }
 
 
@@ -443,7 +443,7 @@
                             })
                             document.querySelector(".text").innerHTML = "";
                             setTimeout(() => {
-                                window.location.href = "event2.html";
+                                window.location.href = "event.html";
                             }, 2000)
                         }
                     }
@@ -574,7 +574,7 @@
                         document.querySelector(".text").innerHTML = "";
                         sessionStorage.setItem("Answered", "false");
                         setTimeout(() => {
-                            window.location.href = "event2.html";
+                            window.location.href = "event.html";
                         }, 2000)
                     }
                 })
