--- a/participate/event.html
+++ b/participate/event.html
@@ -9,7 +9,7 @@
     <title>Hermes | Join Event</title>
     <meta name="description" content="Participate in an Event created for you!">
     <meta name=”robots” content="index, nofollow">
-    <link rel="canonical" href="https://dsc-hermes.netlify.app/participate/event2.html">
+    <link rel="canonical" href="https://dsc-hermes.netlify.app/participate/event.html">
 
     <style>
         :root {
