--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script>
-        window.location.href = "/participate/event.html";
-    </script>
     <style>
         :root {
             --main-color: rgb(40, 131, 251);
@@ -327,7 +324,7 @@
     <meta name="description"
         content="Create quizzes, polls or feedback sessions or Participate in an event set up for you!">
     <meta name=”robots” content="index, follow">
-    <link rel="canonical" href="https://dsc-hermes.netlify.app/">
+    <link rel="canonical" href="https://hermes.dscvit.com/">
     <link rel="icon" type="image/png" href="./img/favicon.png">
 </head>
 
