removing socket testing

--- a/testing/socket-testing.html
+++ b/testing/socket-testing.html
@@ -10,7 +10,7 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 
-    <script>
+    <!-- <script>
         let option_id = "00";
 
         socket = io('https://mighty-sea-62531.herokuapp.com/', { secure: true });
@@ -48,7 +48,7 @@
             console.log(attemptNumber)
         });
 
-    </script>
+    </script> -->
 </body>
 
 </html>
